bindings/RosuFFI.h

typedef struct String String;
typedef struct ScoreState ScoreState;
typedef struct PerformanceAttributes PerformanceAttributes;
typedef struct Option_PerformanceAttributes Option_PerformanceAttributes;
typedef struct Performance Performance;
typedef struct BeatmapAttributesBuilder BeatmapAttributesBuilder;
typedef struct Mods Mods;
typedef struct GradualPerformance GradualPerformance;
typedef struct Beatmap Beatmap;
typedef struct Option_u32 Option_u32;
struct String { uint8_t *ptr; uintptr_t len; uintptr_t capacity; };
struct Option_u32 { uint32_t variant; uint32_t some; };
struct ScoreState {
    uint32_t max_combo;
    uint32_t osu_large_tick_hits;
    uint32_t osu_small_tick_hits;
    uint32_t slider_end_hits;
    uint32_t n_geki;
    uint32_t n_katu;
    uint32_t n300;
    uint32_t n100;
    uint32_t n50;
    uint32_t misses;
    Option_u32 legacy_total_score;
};
struct PerformanceAttributes {
    uint32_t variant;
    union {
        OsuPerformanceAttributes osu;
        TaikoPerformanceAttributes taiko;
        CatchPerformanceAttributes catch_;
        ManiaPerformanceAttributes mania;
    } payload;
};
struct Option_PerformanceAttributes { uint32_t variant; PerformanceAttributes some; };
bool mods_insert_json(Mods * instance, String str, bool deny_unknown_fields);
void beatmap_attributes_builder_s_mods(BeatmapAttributesBuilder * instance, String str);
double beatmap_bpm(Beatmap * instance);
void performance_p_mods(Performance * instance, const Mods * mods);
Option_PerformanceAttributes gradual_performance_nth(GradualPerformance * instance, ScoreState state, uint32_t n);
void beatmap_attributes_builder_p_mods(BeatmapAttributesBuilder * instance, const Mods * mods);
void performance_clock_rate(Performance * instance, double clock_rate);