JavaRosuPP/src/main/java/desu/life/raw/RosuNative.java


    /**
     * {@snippet lang=c :
     * bool mods_insert_json(Mods *instance, String str, bool deny_unknown_fields)
     * }
     */
    public static boolean mods_insert_json(MemorySegment instance, MemorySegment str, boolean deny_unknown_fields) {
        var mh$ = mods_insert_json.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("mods_insert_json", instance, str, deny_unknown_fields);
            }
            return (boolean)mh$.invokeExact(instance, str, deny_unknown_fields);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class beatmap_attributes_builder_s_mods {
        public static final FunctionDescriptor DESC = FunctionDescriptor.ofVoid(
            RosuNative.C_POINTER,
            String_.layout()
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.find("beatmap_attributes_builder_s_mods").orElseThrow();

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * void beatmap_attributes_builder_s_mods(BeatmapAttributesBuilder *instance, String str)
     * }
     */
    public static FunctionDescriptor beatmap_attributes_builder_s_mods$descriptor() {
        return beatmap_attributes_builder_s_mods.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * void beatmap_attributes_builder_s_mods(BeatmapAttributesBuilder *instance, String str)
     * }
     */
    public static MethodHandle beatmap_attributes_builder_s_mods$handle() {
        return beatmap_attributes_builder_s_mods.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * void beatmap_attributes_builder_s_mods(BeatmapAttributesBuilder *instance, String str)
     * }
     */
    public static MemorySegment beatmap_attributes_builder_s_mods$address() {
        return beatmap_attributes_builder_s_mods.ADDR;
    }

    /**
     * {@snippet lang=c :
     * void beatmap_attributes_builder_s_mods(BeatmapAttributesBuilder *instance, String str)
     * }
     */
    public static void beatmap_attributes_builder_s_mods(MemorySegment instance, MemorySegment str) {
        var mh$ = beatmap_attributes_builder_s_mods.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("beatmap_attributes_builder_s_mods", instance, str);
            }
            mh$.invokeExact(instance, str);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class beatmap_bpm {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            RosuNative.C_DOUBLE,
            RosuNative.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.find("beatmap_bpm").orElseThrow();

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * double beatmap_bpm(Beatmap *instance)
     * }
     */
    public static FunctionDescriptor beatmap_bpm$descriptor() {
        return beatmap_bpm.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * double beatmap_bpm(Beatmap *instance)
     * }
     */
    public static MethodHandle beatmap_bpm$handle() {
        return beatmap_bpm.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * double beatmap_bpm(Beatmap *instance)
     * }
     */
    public static MemorySegment beatmap_bpm$address() {
        return beatmap_bpm.ADDR;
    }

    /**
     * {@snippet lang=c :
     * double beatmap_bpm(Beatmap *instance)
     * }
     */
    public static double beatmap_bpm(MemorySegment instance) {
        var mh$ = beatmap_bpm.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("beatmap_bpm", instance);
            }
            return (double)mh$.invokeExact(instance);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class performance_p_mods {
        public static final FunctionDescriptor DESC = FunctionDescriptor.ofVoid(
            RosuNative.C_POINTER,
            RosuNative.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.find("performance_p_mods").orElseThrow();

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * void performance_p_mods(Performance *instance, const Mods *mods)
     * }
     */
    public static FunctionDescriptor performance_p_mods$descriptor() {
        return performance_p_mods.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * void performance_p_mods(Performance *instance, const Mods *mods)
     * }
     */
    public static MethodHandle performance_p_mods$handle() {
        return performance_p_mods.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * void performance_p_mods(Performance *instance, const Mods *mods)
     * }
     */
    public static MemorySegment performance_p_mods$address() {
        return performance_p_mods.ADDR;
    }

    /**
     * {@snippet lang=c :
     * void performance_p_mods(Performance *instance, const Mods *mods)
     * }
     */
    public static void performance_p_mods(MemorySegment instance, MemorySegment mods) {
        var mh$ = performance_p_mods.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("performance_p_mods", instance, mods);
            }
            mh$.invokeExact(instance, mods);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class gradual_performance_nth {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            Option_PerformanceAttributes.layout(),
            RosuNative.C_POINTER,
            ScoreState.layout(),
            RosuNative.C_INT
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.find("gradual_performance_nth").orElseThrow();

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * Option_PerformanceAttributes gradual_performance_nth(GradualPerformance *instance, ScoreState state, uint32_t n)
     * }
     */
    public static FunctionDescriptor gradual_performance_nth$descriptor() {
        return gradual_performance_nth.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * Option_PerformanceAttributes gradual_performance_nth(GradualPerformance *instance, ScoreState state, uint32_t n)
     * }
     */
    public static MethodHandle gradual_performance_nth$handle() {
        return gradual_performance_nth.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * Option_PerformanceAttributes gradual_performance_nth(GradualPerformance *instance, ScoreState state, uint32_t n)
     * }
     */
    public static MemorySegment gradual_performance_nth$address() {
        return gradual_performance_nth.ADDR;
    }

    /**
     * {@snippet lang=c :
     * Option_PerformanceAttributes gradual_performance_nth(GradualPerformance *instance, ScoreState state, uint32_t n)
     * }
     */
    public static MemorySegment gradual_performance_nth(SegmentAllocator allocator, MemorySegment instance, MemorySegment state, int n) {
        var mh$ = gradual_performance_nth.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("gradual_performance_nth", allocator, instance, state, n);
            }
            return (MemorySegment)mh$.invokeExact(allocator, instance, state, n);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class beatmap_attributes_builder_p_mods {
        public static final FunctionDescriptor DESC = FunctionDescriptor.ofVoid(
            RosuNative.C_POINTER,
            RosuNative.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.find("beatmap_attributes_builder_p_mods").orElseThrow();

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * void beatmap_attributes_builder_p_mods(BeatmapAttributesBuilder *instance, const Mods *mods)
     * }
     */
    public static FunctionDescriptor beatmap_attributes_builder_p_mods$descriptor() {
        return beatmap_attributes_builder_p_mods.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * void beatmap_attributes_builder_p_mods(BeatmapAttributesBuilder *instance, const Mods *mods)
     * }
     */
    public static MethodHandle beatmap_attributes_builder_p_mods$handle() {
        return beatmap_attributes_builder_p_mods.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * void beatmap_attributes_builder_p_mods(BeatmapAttributesBuilder *instance, const Mods *mods)
     * }
     */
    public static MemorySegment beatmap_attributes_builder_p_mods$address() {
        return beatmap_attributes_builder_p_mods.ADDR;
    }

    /**
     * {@snippet lang=c :
     * void beatmap_attributes_builder_p_mods(BeatmapAttributesBuilder *instance, const Mods *mods)
     * }
     */
    public static void beatmap_attributes_builder_p_mods(MemorySegment instance, MemorySegment mods) {
        var mh$ = beatmap_attributes_builder_p_mods.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("beatmap_attributes_builder_p_mods", instance, mods);
            }
            mh$.invokeExact(instance, mods);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class performance_clock_rate {
        public static final FunctionDescriptor DESC = FunctionDescriptor.ofVoid(
            RosuNative.C_POINTER,
            RosuNative.C_DOUBLE
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.find("performance_clock_rate").orElseThrow();

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * void performance_clock_rate(Performance *instance, double clock_rate)
     * }
     */
    public static FunctionDescriptor performance_clock_rate$descriptor() {
        return performance_clock_rate.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * void performance_clock_rate(Performance *instance, double clock_rate)
     * }
     */
    public static MethodHandle performance_clock_rate$handle() {
        return performance_clock_rate.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * void performance_clock_rate(Performance *instance, double clock_rate)
     * }
     */
    public static MemorySegment performance_clock_rate$address() {
        return performance_clock_rate.ADDR;
    }
